Revision history for Perl extension Email::Address::Loose

0.01  Tue Jul  8 21:08:23 JST 2008
        - first release